--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^12.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
     "recharts": "^3.1.0",
     "web-vitals": "^2.1.4",
